--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
     <main>
         <section id="about" class="about-section">
             <div class="profile-container">
-                <img src="https://picsum.photos/seed/zigdev/150/150.jpg" alt="Zig Dev" class="profile-img">
+                <img src="/assets/Gh0st.png" alt="Zig Dev" class="profile-img">
                 <h1 class="profile-name">Zig Dev</h1>
                 <p class="profile-title">Hacker & Developer</p>
             </div>
